Add standalone Codename One Settings editor